Made most of the style changes Adam requested. Still need to fix some spacing issues, fonts, navbar, and attempt to add custom icons to FAQ list items.

--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -93,13 +93,15 @@ a:hover .header-profile-image {
 }
 
 @media (min-width: 1000px) {
-	.navbar-center > li {
-		width: 145px;
-		text-align: center;
-		border-right: 2px solid white;
-		float: left;
-		height: 30px;
-		top: 10px;
+	.navbar-right > li {
+		/* width: 145px; */
+		/* text-align: center; */
+		/* border-right: 2px solid white; */
+		/* float: left; */
+		/* height: 30px; */
+		/* top: 10px; */
+		font-family: Arapey;
+		font-size: 2em;
 	}
 
 	.navbar-center > li > a{
